@@ -9,6 +9,7 @@ Designer 2.14.0 (2012-08-XX Markab)
    - Add Domintell configuration (MODELER-391)
    - LPD protocol support (MODELER-406)
    - contentType attribute on HTTP protocol (MODELER-416)
+   - Have protocol names ordered alphabetically for commands (MODELER-417)
 
  Fixes:
 
